update: refactor and fix error when send message